--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-    Rango says here is the about page. <br />
-    <a href="/rango/">Index</a><br />
-    <img src="/static/images/cat.jpg" alt="Picture of cat" />
-    <img src="/media/cat.jpg" alt="Picture of cat" />
-</body>
+<html>
+    <head>
+        <title>Rango</title>
+    </head>
+
+    <body>
+        <h1>Rango says...</h1>
+        <div>
+            <a href="/rango/">index</ a><br />
+        </div>
+        <div>
+            <img src="{{ MEDIA_URL}}cat.jpg" />
+        </div>
+    </body>
 </html>
