--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-<html>
-<head>
-<title>Rango</title>
-</head>
-<body>
-<h1>Rango says...</h1>
+<!DOCTYPE html> {% load staticfiles %} <html> <head> <title>Rango</title> </head>
+<body> <h1>Rango says...</h1>
+<div> hey there partner! </div>
+<div> {% if categories %} <ul>
+ {% for category in categories %} 
+ <!-- Following line changed to add an HTML hyperlink --> <li>
+  <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a> </li> {% endfor %} </ul> {% else %} <strong>There are no categories present.</strong> {% endif %} </div>
+
 <div>
-hey there partner! <br />
-<strong>{{ boldmessage }}</strong><br />
-</div>
-<div>
-<a href="/rango/about/">About</a><br />
-<img src="{% static "images/rango.jpg" %}"
-alt="Picture of Rango" /> <!-- New line -->
-</div>
-</body>
-</html>
+   <h2>Most Viewed Pages</h2>
+   <p>
+   {% if pages %}
+       <ul>
+   {% for page in pages %}
+                <li><a href="{{page.url}}">{{ page.title }}</ a></li>
+       {% endfor %}
+   </ul>
+   {% else %}
+       <strong>There are no pagies present.</strong>
+   {% endif %}
+   </p >
+  </div>
+
+<div> <a href="/rango/about/">About Rango</a><br /> 
+<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> </div> </body> </html>
