--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -19,7 +19,7 @@
                     {{ field }}
                     </p>
                 {% endfor %}
-                <input type="submit" name="submit" value="Create Page" />
+                <input type="submit" name="submit" value="add page" />
             </form>
         </div>
     </body>
