--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -2,14 +2,15 @@
 {% load staticfiles %}
 
 {% block title_block%}
-    About
+    Rango says here is the about page
 {% endblock %}
 
 {% block body_block%}
-        <div>
-            <a href="/rango/">index</a><br />
-        </div>
+    <h1>Rango says here is the about page</h1>
+    <h3><p>visits: {{ visits }}</p ></h3>
+    <img src="{{MEDIA_URL}}cat.jpg" />
     <div>
-        <img src="{{ MEDIA_URL}}cat.jpg" />
+        <img src="/static/images/cat.jpg" alt="Picture of cat" />
+        <img src="/media/cat.jpg" />
     </div>
 {% endblock %}
