--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>
+        {% block title_block %}
         <h1>{{ category.name }}</h1>
+        {% endblock %}
+        </title>
     </head>
     <body>
         <h1>Add a Page</h1>
         <div>
-            <form id="page_form" method="post" action="/rango/category/{{category.slug}}/add_page/">
-            <a href="/rango/category/{{category.slug}}/"> {{ category.name }}>
+            <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
                     {{ hidden }}
@@ -17,9 +20,9 @@
                     {{ field.errors }}
                     {{ field.help_text }}
                     {{ field }}
-                    </p>
+                    </p >
                 {% endfor %}
-                <input type="submit" name="submit" value="add page" />
+                <input type="submit" name="submit" value="Create Page" />
             </form>
         </div>
     </body>
