--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,41 +1,41 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-{% load rango_template_tags %}
-
-<html>
-	<head lang="en">
-        <meta charset="UTF-8" />
-		<title>
-            Rango-
-            {% block title_block %}
-            How to Tango with Django!
-            {% endblock %}
-        </title>
-	</head>
-	<body>
-        <h1>Rango says...</h1>
-            <div>
-                hey there partner!
-            </div>
-        {% block body_block %}
-            This is body_block's default content.
-        {% endblock %}
-        <hr />
-        <div>
-            <ul>
-                <li><a href="{% url 'add_category' %}">Add New Category</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'index' %}">Index</a></li>
-            </ul>
+ <!DOCTYPE html> 
+ 
+ {% load staticfiles %}
+ {% load rango_template_tags %}
+  <html> 
+  <head>
+   <head lang="en"> 
+    <meta charset="UTF-8" /> 
+     <title>
+       Rango-
+      {% block title_block %} 
+        How to Tango with Django! 
+         {% endblock %} 
+     </title> 
+      </head> 
+       <body> 
+        <div> 
+         {% block body_block %} 
+          {% endblock %} 
+           </div> 
+         
+            <hr />
+            <div> 
+              <ul>
+                  {% if user.is_authenticated %}
+                  <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
+                  <li><a href="{% url 'logout' %}">Logout</a></li>
+                  <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+                  {% else %}
+                  <li><a href="{% url 'login' %}">Sign In</a></li>
+                  <li><a href="{% url 'register' %}">Sign Up</a></li>
+                  {% endif %}
+                  <li><a href="{% url 'about' %}">About</a></li>
+                  <li><a href="{% url 'index' %}">Index</a></li>
+                  </ul>
+                  </div> 
+                 <div>
+          
         </div>
-
-        <div>
-            {% block sidebar_block %}
-                {% get_category_list  category %}
-            {% endblock %}
-        </div>
-    </body>
-    <footer>
-        <p>Built by Yunwen Lu, 2019<br /></p>
-    </footer>
-</html>
+          </body> 
+           </html>
