--- a/templates/rango/cats.html
+++ b/templates/rango/cats.html
@@ -1,15 +1,15 @@
 <ul>
-    {% if cats %}
-        {% for c in cats %}
-            <li>
-            {% if c == act_cat %}
-                <strong><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a></strong>
-            {% else %}
-                <a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
-            {% endif %}
-            </li>
-        {% endfor %}
-    {% else %}
-        <li><strong>There are no categories present. </strong></li>
-    {% endif %}
-</ul>
+ {% for c in cats %}
+{% if c == act_cat %}
+<li>
+<strong>
+<a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
+</strong>
+</li>
+{% else %}
+<li>
+<a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
+</li>
+{% endif %}
+{% endfor %}
+ </ul>
