--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,19 +1,35 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
+{% extends 'rango/base.html' %}
+      {% load staticfiles %} 
+      
+ {% block title_block %} 
+        {{ Rango }}
+         {% endblock %} 
+     {% block body_block %}
         <h1>Rango says...</h1>
 
-        <div>
-            hey there partner!
-        </div>
+      {% if user.is_authenticated %}
+hello {{ user.username }}!
+{% else %}
+hello there partner!
+{% endif %}
+<div> 
+              <ul>
+                  {% if user.is_authenticated %}
+                  <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
+                  <li><a href="{% url 'logout' %}">Logout</a></li>
+                  <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+                  {% else %}
+                  <li><a href="{% url 'login' %}">Sign In</a></li>
+                  <li><a href="{% url 'register' %}">Sign Up</a></li>
+                  {% endif %}
+                  <li><a href="{% url 'about' %}">About</a></li>
+                  <li><a href="{% url 'index' %}">Index</a></li>
+                  </ul>
+                  </div> 
 
         <div>
         <h2>Most Liked Categories</h2>
+        <h3><p>visits: {{ visits }}</p ></h3>
 		    <p>
         {% if categories %}
         <ul>
@@ -45,10 +61,14 @@
 		</div>
 
         <div>
+           
+      {% if user.is_authenticated %}
             <p><a href="/rango/add_category/">Add a New Category</a></p>
+            {% endif %}
+            <h3><p>visits: {{ visits }}</p ></h3>
             {% comment %} <a href="/rango/about/">About Rango</a><br /> {% endcomment %}
             <a href="{% url 'about' %}">About</a>
             <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
         </div>
-    </body>
-</html>
+
+{% endblock %}
