--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -7,7 +7,7 @@
 
 {% block body_block%}
     <h1>Rango says here is the about page</h1>
-    <h3><p>visits: {{ visits }}</p ></h3>
+    <p>visits: {{ visits }}</p>
     <img src="{{MEDIA_URL}}cat.jpg" />
     <div>
         <img src="/static/images/cat.jpg" alt="Picture of cat" />
