--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,5 +1,8 @@
   {% extends 'rango/base.html' %}
       {% load staticfiles %} 
+      {% block title_block %} 
+Add Category 
+{% endblock %} 
       {% block body_block %}
  <h1>Add a Category</h1>
  <div>
