--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,19 +1,20 @@
+<!DOCTYPE html> 
 {% extends 'rango/base.html' %}
-      {% load staticfiles %} 
-      
- {% block title_block %} 
-        Index 
-         {% endblock %} 
-     {% block body_block %}
-        <h1>Rango says...</h1>
-
-      {% if user.is_authenticated %}
-howdy  {{ user.username }}!
-{% else %}
-hey there partner!
-{% endif %}
+{% load staticfiles %} 
+{% block title_block %} 
+Index 
+{% endblock %} 
+{% block body_block %} 
+ 
+    <h1>Rango says...</h1> 
+    {% if user.is_authenticated %} 
+    howdy {{ user.username }}! 
+    {% else %} 
+    hey there partner! 
+    {% endif %}
 <div> 
-             {% if categories %} 
+    
+    {% if categories %} 
     <h4>Most Liked Categories</h4>
     <ul> 
         {% for category in categories %} 
