--- a/templates/rango/cats.html
+++ b/templates/rango/cats.html
@@ -1,15 +1,16 @@
-<ul>
- {% for c in cats %}
-{% if c == act_cat %}
-<li>
-<strong>
-<a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
-</strong>
-</li>
-{% else %}
-<li>
-<a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
-</li>
-{% endif %}
-{% endfor %}
- </ul>
+<ul> 
+    {%if cats%}
+        {% for c in cats %}
+            {% if c == act_cat %}
+        <li> <strong>
+        <a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> 
+        </strong>       
+        </li>        
+        {% else %}        
+        <li>        
+        <a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>        
+        </li>        
+        {% endif %}      
+        {% endfor %}     
+        {% endif %}      
+        </ul>
